[gd_scene load_steps=4 format=3 uid="uid://cjdk1gl0je131"]

[ext_resource type="Script" path="res://LootItem.gd" id="1_eggdx"]
[ext_resource type="Script" path="res://PickUpControl.gd" id="2_edv1x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lx1hv"]
radius = 24.0

[node name="Area2D" type="Area2D" groups=["loot"]]
script = ExtResource("1_eggdx")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_lx1hv")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_edv1x")

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 16.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="loot_area_entered" from="." to="Control" method="_on_loot_area_entered"]
[connection signal="loot_area_exited" from="." to="Control" method="_on_loot_area_exited"]
[connection signal="loot_item_ready" from="." to="Control" method="_on_loot_item_ready"]
[connection signal="pressed" from="Control/Button" to="." method="_on_loot_button_pressed"]
